Optimize player stats generators
- Properly handle NaN values in GeneratedPlayerEntry (Converted to 0)
- Fix BaseStatsGenerator:getKills not handling valid 0 kills stat
- Add BaseStatsGenerator::getWins to handle blockhunt wins correctly